--- a/survey/src/main/res/layout/location_step.xml
+++ b/survey/src/main/res/layout/location_step.xml
@@ -18,6 +18,7 @@
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:hint="@string/hint_address"
+            android:imeOptions="actionSearch"
             android:importantForAutofill="no"
             android:inputType="textCapSentences"
             android:maxLines="2"
