Use EditText when "Other" option is selected

--- a/survey/src/main/res/drawable/input_border_none_border_pressed.xml
+++ b/survey/src/main/res/drawable/input_border_none_border_pressed.xml
@@ -6,10 +6,7 @@
         android:right="-2dp"
         android:top="-2dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/transparent" />
-            <stroke
-                android:width="0.5dp"
-                android:color="@color/separator_grey" />
+            <solid android:color="@android:color/transparent" />
         </shape>
     </item>
 
