--- a/survey/src/main/res/drawable/input_border_pressed.xml
+++ b/survey/src/main/res/drawable/input_border_pressed.xml
@@ -5,7 +5,7 @@
         android:left="-2dp"
         android:right="-2dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/pressed_grey" />
+            <solid android:color="@color/transparent" />
             <stroke
                 android:width="0.5dp"
                 android:color="@color/separator_grey" />
