--- a/survey/src/main/res/layout/layout_content.xml
+++ b/survey/src/main/res/layout/layout_content.xml
@@ -8,20 +8,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:weightSum="100">
 
         <LinearLayout
             android:id="@+id/content_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="90"
+            android:gravity="center_vertical"
             android:orientation="vertical" />
 
         <LinearLayout
             android:id="@+id/footer_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/footer_vertical_margin"
-            android:layout_marginBottom="@dimen/footer_vertical_margin"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_height="0dp"
+            android:layout_weight="10"
             android:orientation="vertical" />
 
     </LinearLayout>
