--- a/survey/src/main/res/layout/layout_content.xml
+++ b/survey/src/main/res/layout/layout_content.xml
@@ -14,7 +14,7 @@
             android:id="@+id/content_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:orientation="vertical" />
 
         <LinearLayout
