Use Material library for components

--- a/survey/src/main/res/layout/layout_header.xml
+++ b/survey/src/main/res/layout/layout_header.xml
@@ -21,8 +21,9 @@
             android:background="@drawable/left_arrow" />
     </RelativeLayout>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/headerCancelButton"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@null"
