--- a/survey/src/main/res/layout/layout_footer.xml
+++ b/survey/src/main/res/layout/layout_footer.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_continue"
+        style="@style/Widget.MaterialComponents.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/button_margin"
-        android:background="@drawable/main_button_background"
         android:paddingStart="@dimen/button_padding_horizontal"
         android:paddingTop="@dimen/button_padding_vertical"
         android:paddingEnd="@dimen/button_padding_horizontal"
@@ -21,13 +21,13 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Weiter" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_skip_question"
+        style="@style/Widget.MaterialComponents.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/button_margin"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/skip_button_background"
         android:paddingStart="@dimen/button_padding_horizontal"
         android:paddingTop="@dimen/button_padding_vertical"
         android:paddingEnd="@dimen/button_padding_horizontal"
