--- a/survey/src/main/res/values/colors.xml
+++ b/survey/src/main/res/values/colors.xml
@@ -19,4 +19,7 @@
     <color name="color_primary">#008577</color>
     <color name="color_primary_dark">#00574B</color>
     <color name="color_accent">#36BFCC</color>
+
+    <color name="dark_baseline">#040427</color>
+    <color name="toolbar_background">#ffffff</color>
 </resources>
