--- a/survey/src/main/res/layout/layout_footer.xml
+++ b/survey/src/main/res/layout/layout_footer.xml
@@ -1,24 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_continue"
         style="@style/Widget.MaterialComponents.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/button_margin"
-        android:paddingStart="@dimen/button_padding_horizontal"
-        android:paddingTop="@dimen/button_padding_vertical"
-        android:paddingEnd="@dimen/button_padding_horizontal"
-        android:paddingBottom="@dimen/button_padding_vertical"
-        app:layout_constraintBottom_toTopOf="@+id/button_skip_question"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginHorizontal="@dimen/question_vertical_padding"
+        android:layout_marginVertical="@dimen/button_padding_vertical"
+        android:textColor="@android:color/white"
         tools:text="Weiter" />
 
     <com.google.android.material.button.MaterialButton
@@ -26,16 +21,9 @@
         style="@style/Widget.MaterialComponents.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/button_margin"
-        android:layout_marginBottom="20dp"
-        android:paddingStart="@dimen/button_padding_horizontal"
-        android:paddingTop="@dimen/button_padding_vertical"
-        android:paddingEnd="@dimen/button_padding_horizontal"
-        android:paddingBottom="@dimen/button_padding_vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginHorizontal="@dimen/question_vertical_padding"
+        android:layout_marginVertical="@dimen/button_padding_vertical"
         tools:text="Frage überspringen" />
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
