--- a/survey/src/main/res/values/ids.xml
+++ b/survey/src/main/res/values/ids.xml
@@ -25,4 +25,6 @@
     <item name="timePickerPart" type="id" />
 
     <item name="imageSelectorPart" type="id" />
+
+    <item name="fragmentContainer" type="id" />
 </resources>
